<resources>
    <string name="app_name">Time-table</string>
    <string name="item1">Понедельни</string>
    <string name="item2">Вторник</string>
    <string name="item3">Среда</string>
    <string name="item4">Четверг</string>
    <string name="item5">Пятница</string>
    <string name="item6">Суббота</string>
    <string name="item7">Воскресенье</string>
    <string name="title_activity_ime_table_activity">ime_table_activity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
</resources>
